# nq-strategy-builder

./: .gitignore  ARCHITECTURE.md  DOKUMENTATION.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements-lock.txt  requirements.txt  sb.py
docs/: methodology.md
examples/: README.md  algo_09_fair_value_gap_v2.py  algo_20_sessions_v2.py  algo_21_opening_range_v2.py  algo_25_bos_v2.py  algo_30_displacement_v2.py  algo_31_premium_discount_v2.py  algo_33_dealing_range_v2.py  algo_inside_day_v2.py  science_hurst_exponent_v2.py
helfer/: __init__.py  batch_pilot.py  cache_guard.py  common.py  daten_waechter.py  dreaming_cron.py  quality_gate.py  session_entlaster.py  status_board.py
sb/: _helpers.py  algo_paths.py  analyse.py  atr_analysis.py  cli.py  combinator.py  cross_algo_research.py  dashboard.py  diagnose.py  export_registry.py  inspect.py  latency.py  level_analysis.py  live_check.py  logging.py  models.py  regime_test.py  report.py  test7_pd_regime_deep.py  trade_export.py  validate_idea.py  zeit_analysis.py
sb/memory/: db.py
scripts/: 1min_analyse_rund2.py  1min_event_ketten_v2.py  1min_feature_importance.py  1min_komplett_analyse.py  1min_oos_makro_matrix.py  _logging.py  audit_algos.py  auto_research_agent.py  backfill_params.py  baustein_analyse.py  chain_probability.py  hurst_vergleich.py  import_reports.py  param_sensitivity.py  premium_discount_tests.py  rolling_pf_monitor.py  settlement_breakout_deep.py  settlement_spezialtests.py  strategie_pipeline.py  test_epe_strategy.py  test_ndog_strategy.py  test_ndog_strategy_v2.py  tv_data_collector.py
(+83 files in other folders)
