[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nq-strategy-builder"
version = "0.1.0"
description = "Systematic framework for discovering edge in NQ futures — NLP-driven strategy composition with walk-forward validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [{name = "nessos666"}]
keywords = [
    "algorithmic-trading",
    "futures",
    "nasdaq",
    "backtesting",
    "walk-forward",
    "optuna",
    "quantitative-finance",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "optuna>=3.0",
    "pyarrow>=12.0",
    "loguru>=0.7",
    "rich>=13.0",
    "pydantic>=2.0",
    "typer>=0.9",
    "pytz>=2024.1",
    "scikit-learn>=1.3",
    "watchdog>=4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=5.0",
]

[project.scripts]
sb = "sb.cli:app"

[tool.setuptools.packages.find]
include = ["sb*", "building_blocks*", "helfer*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning:multiprocessing"]
